--- a/index.html
+++ b/index.html
@@ -1,27 +1,53 @@
 ---
 layout: default
+topbar_active: home
 ---
 <div class="row">
-  {% for post in paginator.posts %}
-  <div class="gr-4 gr-6--tablet gr-12--mobile">
+  <div class="gr-9 gr-12--mobile">
+    {% assign latest_post = paginator.posts[0] %}
     <div class="card">
-      <div class="card__thumbnail">
-	<a href="{{ post.url }}">
-	  <img src="{% if post.feature_image %}{{ post.feature_image | prepend: 'img/' | prepend: site.asseturl }}{% else %}{{ post.feature_image | prepend: 'img/' | prepend: site.asseturl }}{% endif %}">
-	</a>
+      <div class="gr-7 gr-12--mobile card__thumbnail no-gutter-left">
+	<img src="{{ latest_post.feature_image | prepend: 'img/' | prepend: site.asseturl }}" />
       </div>
-      <a href="{{ post.url }}" class="card__title card__title--fixed">{{ post.title }}</a>
-      <div class="card-info">
-	<span class="card-info__date"><i class="i-calendar"></i>&nbsp;&nbsp;{{ post.date | date: "%b %-d, %Y" }}</span>
-	<span class="card-info__tags">
-          {% for tag in post.tags %}
-          <a class="tag" href="{{ "/tag/" | prepend: site.baseurl | append: tag | append: "/" | downcase }}">{{ tag }}</a>
-          {% endfor %}
-	</span>
+      <div class="gr-5 gr-12--mobile card__content no-gutter-right">
+	<div class="card-info u-mg-btm--medium">
+	  <span class="card-info__date"><i class="i-calendar"></i>&nbsp;&nbsp;{{ latest_post.date | date: "%b %-d, %Y" }}</span>
+	  <span class="card-info__tags">
+            {% for tag in latest_post.tags %}
+            <a class="tag" href="{{ "/tag/" | prepend: site.baseurl | append: tag | append: "/" | downcase }}">{{ tag }}</a>
+            {% endfor %}
+	  </span>
+	</div>	  	  
+	<h2 class="card__title u-text-post--x-large">{{ latest_post.title }}</h2>
       </div>
     </div>
+    <div class="row">
+      {% for post in paginator.posts %}
+      {% unless forloop.first %}
+      <div class="gr-4 gr-6--tablet gr-12--mobile">
+	<div class="card">
+	  <div class="card__thumbnail">
+	    <a href="{{ post.url }}">
+	      <img src="{% if post.feature_image %}{{ post.feature_image | prepend: 'img/' | prepend: site.asseturl }}{% else %}{{ post.feature_image | prepend: 'img/' | prepend: site.asseturl }}{% endif %}">
+	    </a>
+	  </div>
+	  <a href="{{ post.url }}" class="card__title card__title--fixed">{{ post.title }}</a>
+	  <div class="card-info">
+	    <span class="card-info__date"><i class="i-calendar"></i>&nbsp;&nbsp;{{ post.date | date: "%b %-d, %Y" }}</span>
+	    <span class="card-info__tags">
+              {% for tag in post.tags %}
+              <a class="tag" href="{{ "/tag/" | prepend: site.baseurl | append: tag | append: "/" | downcase }}">{{ tag }}</a>
+              {% endfor %}
+	    </span>
+	  </div>
+	</div>
+      </div>
+      {% endunless %}
+      {% endfor %}
+      {% include pagination.html %}      
+    </div>
   </div>
-  {% endfor %}
-  
-  {% include pagination.html %}
+  <div class="gr-3 hide--mobile">
+    {% include aside.html %}
+  </div>
 </div>
