--- a/index.html
+++ b/index.html
@@ -24,23 +24,12 @@ topbar_active: home
     <div class="row">
       {% for post in paginator.posts %}
       {% unless forloop.first %}
-      <div class="gr-4 gr-6--tablet gr-12--mobile">
-	<div class="card">
-	  <div class="card__thumbnail">
-	    <a href="{{ post.url }}">
-	      <img class="card__thumbnail__img" src="{% if post.feature_image %}{{ post.feature_image | prepend: 'img/' | prepend: site.asseturl }}{% else %}{{ post.feature_image | prepend: 'img/' | prepend: site.asseturl }}{% endif %}">
-	    </a>
-	  </div>
-	  <a href="{{ post.url }}" class="card__title card__title--fixed">{{ post.title }}</a>
-	  <div class="card-info">
-	    <span class="card-info__date"><i class="i-calendar"></i>&nbsp;&nbsp;{{ post.date | date: "%b %-d, %Y" }}</span>
-	    <span class="card-info__tags">
-              {% for tag in post.tags %}
-              <a class="tag" href="{{ "/tag/" | prepend: site.baseurl | append: tag | append: "/" | downcase }}">{{ tag }}</a>
-              {% endfor %}
-	    </span>
-	  </div>
-	</div>
+      <div class="gr-4 gr-12--mobile">
+	{% if post.feature_image %}
+	{% include card-with-thumbnail.html %}
+	{% else %}
+	{% include card.html %}
+	{% endif %}
       </div>
       {% endunless %}
       {% endfor %}
