fix feature image trailing margin on mobile

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ topbar_active: home
   <div class="gr-9 gr-12--tablet gr-12--mobile">
     {% assign latest_post = paginator.posts[0] %}
     <div class="card">
-      <div class="gr-7 gr-12--mobile gr-12--tablet card__thumbnail no-gutter-left">
+      <div class="gr-7 gr-12--mobile gr-12--tablet card__thumbnail no-gutter-left no-gutter-right--mobile">
 	<img class="card__thumbnail__img" src="{{ latest_post.feature_image | prepend: 'img/' | prepend: site.asseturl }}" />
       </div>
       <div class="gr-5 gr-12--mobile gr-12--tablet card__content no-gutter-right">
